--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "creazy-repo"
+        url = "https://repository.creazy.pl"
+    }
 }
 
 dependencies {
